--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         </div>
     </div>
 
+    <div class="botaoMobile">
+        <button onclick="pular()">⬆️</button>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
