--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="botaoMobile">
-        <button onclick="pular()">⬆️</button>
+        <button id="btnPular">⬆️</button>
     </div>
 
     <script src="js/script.js"></script>
